@@ -20,7 +20,18 @@ class Bar(object):
     def __str__(self):
         return "Bar(%d, %d)" % (self.x, self.y)
 
+class OldSchool:
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+    def __eq__(self, other):
+        return other.__class__ is self.__class__ and other.x==self.x and other.y==self.y
 
+class OldSchoolWithoutCompare:    
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+    
 class BarWithoutCompare(object):
     def __init__(self, x, y):
         self.x = x
